fix(ServerCard): adjust card height to fully fit all online players and avoid scrollbar for last player

--- a/frontend/src/Components/Pages/ServersPage/AllServers/GameType/ServerCard/ServerCard.module.scss
+++ b/frontend/src/Components/Pages/ServersPage/AllServers/GameType/ServerCard/ServerCard.module.scss
@@ -6,8 +6,8 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  min-height: 390px;
-  transition: border-color 0.2s;
+  min-height: 392px;
+  transition: border-color .2s;
 
   &:hover {
     border-color: #3b434d;
