--- a/frontend/src/Components/Pages/ServersPage/AllServers/GameType/ServerCard/ServerCardPlayersSection/OnlinePlayersList/OnlinePlayersList.module.scss
+++ b/frontend/src/Components/Pages/ServersPage/AllServers/GameType/ServerCard/ServerCardPlayersSection/OnlinePlayersList/OnlinePlayersList.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 8px;
   overflow-y: auto;
-  max-height: 220px;
+  max-height: 222px;
   flex-grow: 1;
   padding-right: 4px;
   overscroll-behavior: contain;
